[package]
name = "ccv2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
rand = "0.8.5"
indicatif = "0.16.2"
num_cpus = "1.13.1"
serde = {version="1.0", features=["rc"]}
serde_json = "1.0"
serde_derive = "1.0"
